--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -14,9 +14,18 @@
 @import blocks/Names
 @import blocks/HallOfFame
 @import blocks/Prizes
+@import blocks/Hamburger
+@import blocks/Pageslide
+@import blocks/Navigation
+
+/** HTML */
+html
+    overflow-x: hidden
 
 /** BODY */
 body
     background-repeat: repeat
     background-image: url(images/bg.png)
     padding: 0 1em
+    transition: left 0.3s ease, right 0.3s ease
+    position: absolute
