made modals better

--- a/resources/sass/_ui.sass
+++ b/resources/sass/_ui.sass
@@ -70,3 +70,9 @@ a
     &:hover
         text-decoration: underline
         color: darken($red, 10)
+        &.darkyellow
+            color: darken($darkyellow, 10)
+        &.blue
+            color: darken($blue, 10)
+        &.orange
+            color: darken($orange, 10)
