--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -6,7 +6,7 @@
 @import utils/grid
 @import text
 @import ui
-@import vendor/popeye.min
+@import vendor/popeye
 
 /** BLOCKS */
 @import blocks/Header
