A few minor changes

--- a/resources/sass/blocks/Names.sass
+++ b/resources/sass/blocks/Names.sass
@@ -9,7 +9,4 @@
 
     +element('name')
         text-decoration: none
-        &:hover
-            text-decoration: underline
-        &:after
-            content: ' '
+        margin-right: 0.1em
