--- a/resources/sass/blocks/Schedule.sass
+++ b/resources/sass/blocks/Schedule.sass
@@ -45,7 +45,7 @@
 
     +element('time')
         font-size: 1.5em
-        color: $red
+        color: $blue
         margin-bottom: 0.25em
 
     +element('event')
