--- a/resources/sass/_ui.sass
+++ b/resources/sass/_ui.sass
@@ -1,5 +1,5 @@
 /** BUTTONS */
-button
+button, .button
     display: inline-block
     background-color: $red
     border: 0.25em solid
@@ -14,6 +14,8 @@ button
     transition: background-color 0.3s ease-out
     &:hover
         background-color: lighten($red, 5)
+        color: $white
+        text-decoration: none
     &:focus
         outline: none
     +big
@@ -76,3 +78,6 @@ a
             color: darken($blue, 10)
         &.orange
             color: darken($orange, 10)
+
+.uppercase
+    text-transform: uppercase
