Fixed gulpfile & added rules

--- a/public/templates/modals/rules.html
+++ b/public/templates/modals/rules.html
@@ -1,1 +1,19 @@
 <h1>Official Rules</h1>
+<p>Entry fee is $10 paid at the time of registration via mail.</p>
+<p>Please mail a check made out to "Robin Kessinger Festival" to the following address:</p>
+<p><strong>RKF CONTEST ENTRY</strong><br>
+c/o Kayce Gentry<br>
+145 Clarkson Run<br>
+Spencer WV, 25276</p>
+<p>Contests are open to anyone except those who are performing as a billed entertainer. Workshop leaders may also enter the contest if they are not billed entertainers. Contestants are allowed to choose any rhythm player to accompany them, including workshop leaders and billed entertainers.</p>
+<p>Only 20 contestants may compete per contest. Drawing is one half-hour before the contest begins. Contestants <strong>MUST HAVE A VALID / PURCHASED  TICKET</strong> for the day of the contest.</p>
+<p>Contestants must play instruments acoustically into a microphone. An instrument’s electrical capability cannot be used.</p>
+<p>Maximum playing time is two-and-a-half (2.5) minutes per tune.</p>
+<p>Contestants may have one rhythm instrument for accompaniment. Contestants will not be allowed to take two instruments on stage. Selection committee reserves the right to eliminate contestants whose style of playing and selection of material are not in keeping with the flavor of the Festival.</p>
+<p><strong>A MEDLEY OF TUNES IS NOT ACCEPTABLE.</strong></p>
+<p>In an effort to judge the contest objectively and equally, the following criteria will be considered by the judges and assigned point value. In following Windfield’s national competition rules, blind judging is used.</p>
+<p><strong>40 points <span class="blue">ARRANGEMENT</span></strong> – Contestant’s version of the tune selected. Is it appropriate to the tune and instrument? Difficulty and originality will be considered.</p>
+<p><strong>40 points <span class="darkyellow">EXECUTION, TUNING</span></strong> – Fingering, picking and dynamics will be considered. Is the instrument in tune?</p>
+<p><strong>10 points <span class="orange">SHOW VALUE</span></strong> – The music should be played with life and feeling. It should not appear listless nor should it drag.</p>
+<p><strong>10 points <span class="red">OVERALL IMPRESSION</span></strong></p>
+<p><strong>CONTESTANTS ARE NOT ALLOWED TO SPEAK ON STAGE</strong></p>
