minor template changes

--- a/public/templates/modals/rules.html
+++ b/public/templates/modals/rules.html
@@ -1,4 +1,4 @@
-<h1>Official Rules</h1>
+<h1>Official Contest Rules</h1>
 <p>Entry fee is $10 paid at the time of registration via mail.</p>
 <p>Please mail a check made out to "Robin Kessinger Festival" to the following address:</p>
 <p><strong>RKF CONTEST ENTRY</strong><br>
