--- a/resources/sass/blocks/Modal.sass
+++ b/resources/sass/blocks/Modal.sass
@@ -5,7 +5,7 @@
 
     .image
         width: 100%
-        height: 300px
+        height: 20vw
         background-size: cover
         background-position: top center
         margin-bottom: 2em
