--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -19,6 +19,7 @@
 @import blocks/Navigation
 @import blocks/Footer
 @import blocks/Modal
+@import blocks/ContestRegistrationForm
 
 /** HTML */
 html
