--- a/resources/sass/_ui.sass
+++ b/resources/sass/_ui.sass
@@ -81,3 +81,28 @@ a
 
 .uppercase
     text-transform: uppercase
+
+// Fancy checkbox
+input[type="checkbox"]
+    position: absolute
+    overflow: hidden
+    clip: rect(0 0 0 0)
+    height: 1px
+    width: 1px
+    margin: -1px
+    padding: 0px
+    border: 0
+    & + label
+        padding-left: 2em
+        height: 1em
+        width: 100%
+        background-repeat: no-repeat
+        background-position: 0 0
+        font-size: 1em
+        vertical-align: middle
+        cursor: pointer
+        background-image: url(/images/checkbox.png)
+        background-position: 0 0
+        background-size: 1.25em
+    &:checked + label
+        background-position: 0 -1.3em
