Finished front end

--- a/public/templates/modals/register.html
+++ b/public/templates/modals/register.html
@@ -6,7 +6,7 @@
            <!-- Name -->
            <div ng-class="{'ContestRegistrationForm__field-error': forms.contestRegistrationForm.$submitted && forms.contestRegistrationForm.name.$invalid}" class="ContestRegistrationForm__field">
                <label class="ContestRegistrationForm__label" for="name">Name</label>
-               <input class="ContestRegistrationForm__input" id="name" name="name" type="text" placeholder="John Doe" ng-model="registrant.name" autofocus required>
+               <input class="ContestRegistrationForm__input" id="name" name="name" type="text" placeholder="John Doe" ng-model="registrant.name" required>
            </div> 
         </div>
         <div class="grid-half">
