mobile optimizations, favicon, blade orginization

--- a/source/resources/sass/_text.sass
+++ b/source/resources/sass/_text.sass
@@ -41,6 +41,8 @@ p
     font-weight: 400
     +big
         font-size: 25.6px
+    +mobile
+        font-size: 5vw
 
 /**
  * Text Alignment
@@ -58,3 +60,5 @@ p
  */
 .smaller
     font-size: 0.8em
+    +mobile
+        font-size: 1em
