--- a/source/resources/sass/_ui.sass
+++ b/source/resources/sass/_ui.sass
@@ -20,6 +20,8 @@ button, .button
         outline: none
     +big
         font-size: 30.72px
+    +mobile
+        font-size: 5vw
 
 /** HORIZONTAL RULE */
 hr
@@ -106,3 +108,9 @@ input[type="checkbox"]
         background-size: 1.25em
     &:checked + label
         background-position: 0 -1.3em
+
+br
+    margin: 0
+    line-height: 0
+    padding: 0
+    font-size: 0
