--- a/source/resources/sass/app.sass
+++ b/source/resources/sass/app.sass
@@ -32,3 +32,21 @@ body
     padding: 0 1em
     transition: left 0.3s ease, right 0.3s ease
     position: absolute
+
+/** Additional Mobile Tweaks */
++mobile
+    #contest-information
+        font-size: 0.25em
+        h4
+            font-size: 5em
+        button
+            margin-bottom: 1em
+            margin-top: 1em
+            font-size: 4em
+
+    #tickets-admission
+        font-size: 0.25em
+        h4
+            font-size: 4em
+    #contact-us
+        font-size: 0.25em
