--- a/source/resources/sass/blocks/Names.sass
+++ b/source/resources/sass/blocks/Names.sass
@@ -10,3 +10,6 @@
     +element('name')
         text-decoration: none
         margin-right: 0.1em
+        +mobile
+            display: block
+            margin-bottom: 0.25em
