--- a/source/resources/sass/blocks/HallOfFame.sass
+++ b/source/resources/sass/blocks/HallOfFame.sass
@@ -7,6 +7,8 @@
     background-color: rgba(255,255,255,0.2)
     +big
         margin-top: 40.96px
+    +mobile
+        margin-top: 10vw
 
     +element('title')
         width: 40vw
@@ -23,6 +25,9 @@
         +big
             top: -40.96px
             width: 409.594px
+        +mobile
+            font-size: 6vw !important
+            width: 50vw
 
     +element('winners')
         list-style: none
