--- a/source/resources/sass/blocks/Navigation.sass
+++ b/source/resources/sass/blocks/Navigation.sass
@@ -10,6 +10,9 @@
         font-size: 4vw
         margin-bottom: 0.5em
         transition: padding-left 0.3s ease-out
+        +mobile
+            font-size: 7vw
+            margin-bottom: 1.5em
 
         &:hover
             color: $white
