--- a/source/resources/sass/blocks/Prizes.sass
+++ b/source/resources/sass/blocks/Prizes.sass
@@ -7,6 +7,10 @@
     font-family: 'Alegreya Sans', sans-serif
     +big
         font-size: 25.6px
+    +mobile
+        font-size: 4em
+        text-align: center
+        margin-bottom: 2em
     
     +element('prize')
         margin-bottom: 1em
