--- a/source/resources/sass/utils/grid.sass
+++ b/source/resources/sass/utils/grid.sass
@@ -11,5 +11,9 @@
     /** Columns */
     &third
         lost-column: 1/3
+        +mobile
+            lost-column: 1/1
     &half
         lost-column: 1/2
+        +mobile
+            lost-column: 1/1
