altered date on mobile

--- a/source/resources/sass/blocks/Schedule.sass
+++ b/source/resources/sass/blocks/Schedule.sass
@@ -23,6 +23,8 @@
         +mobile
             lost-column: 1/1
             padding-bottom: 0.25em
+            border: none
+            background-color: transparent
             & > *
                 font-size: 3em !important
                 display: inline
