Removed page sliding menu effect

--- a/source/resources/sass/utils/screen.sass
+++ b/source/resources/sass/utils/screen.sass
@@ -6,6 +6,10 @@
     @media screen and (max-width: 425px)
         @content
 
+=desktop
+    @media screen and (min-width: 426px)
+        @content
+
 .show-mobile
     display: none
     +mobile
