--- a/source/resources/sass/blocks/Pageslide.sass
+++ b/source/resources/sass/blocks/Pageslide.sass
@@ -5,6 +5,7 @@ body.ng-pageslide-body-open:before
     content: '.'
     display: block
     position: absolute
+    position: fixed
     top: 0
     background-color: rgb(0,0,0)
     left: 0
