--- a/source/resources/sass/app.sass
+++ b/source/resources/sass/app.sass
@@ -31,6 +31,7 @@ body
     background-image: url(images/bg.png)
     padding: 0 1em
     transition: left 0.3s ease, right 0.3s ease
+    position: absolute
 
 /** Additional Mobile Tweaks */
 +mobile
