--- a/source/resources/sass/app.sass
+++ b/source/resources/sass/app.sass
@@ -32,6 +32,8 @@ body
     padding: 0 1em
     transition: left 0.3s ease, right 0.3s ease
     position: absolute
+    width: 100%
+    overflow-x: hidden
 
 /** Additional Mobile Tweaks */
 +mobile
