--- a/source/resources/sass/blocks/ContestRegistrationForm.sass
+++ b/source/resources/sass/blocks/ContestRegistrationForm.sass
@@ -66,3 +66,6 @@
             +mobile
                 margin-top: 1em
                 margin-bottom: 3.5em
+
+    +element('spinner')
+        height: 1em
