Updated admission information

--- a/source/resources/sass/_text.sass
+++ b/source/resources/sass/_text.sass
@@ -1,21 +1,21 @@
-h1, h2 
+h1, h2, .h1, .h2
     font-family: 'Luckiest Guy', sans-serif
     text-transform: uppercase
     text-align: center
     letter-spacing: 0.05em
 
-h1
+h1, .h1
     font-size: 7vw
     +big
         font-size: 71.68px
         
 
-h2
+h2, .h2
     font-size: 6vw
     +big
         font-size: 61.44px
 
-h3
+h3, .h3
     font-size: 10vw
     font-family: 'Amatic SC', cursive
     text-align: center
@@ -24,7 +24,7 @@ h3
     +big
         font-size: 102.4px
 
-h4
+h4, .h4
     font-size: 5vw
     font-family: 'Passion One', sans-serif
     text-align: center
@@ -33,7 +33,7 @@ h4
         font-size: 45.9px
 
 
-p
+p, .p
     font-size: 2.5vw
     font-family: 'Alegreya Sans', sans-serif
     text-transform: none
