--- a/source/public/templates/modals/rules.html
+++ b/source/public/templates/modals/rules.html
@@ -2,9 +2,9 @@
 <p>Entry fee is $10 paid at the time of registration via mail.</p>
 <p>Please mail a check made out to "Robin Kessinger Festival" to the following address:</p>
 <p><strong>RKF CONTEST ENTRY</strong><br>
-c/o Kayce Gentry<br>
-145 Clarkson Run<br>
-Spencer WV, 25276</p>
+c/o June Kessinger<br>
+P.O. Box 52<br>
+New Haven, WV 25265</p>
 <p>Contests are open to anyone except those who are performing as a billed entertainer. Workshop leaders may also enter the contest if they are not billed entertainers. Contestants are allowed to choose any rhythm player to accompany them, including workshop leaders and billed entertainers.</p>
 <p>Only 20 contestants may compete per contest. Drawing is one half-hour before the contest begins. Contestants <strong>MUST HAVE A VALID / PURCHASED  TICKET</strong> for the day of the contest.</p>
 <p>Contestants must play instruments acoustically into a microphone. An instrument’s electrical capability cannot be used.</p>
